--- a/index.html
+++ b/index.html
@@ -242,6 +242,16 @@
     <div></div>
     <div></div>
   </div>
+  <div class="up-button">
+    <button id = "rotate-clockwise">↑</button>
+  </div>
+  <div class="rest-of-buttons">
+    <button id = "move-left">←</button>
+    <button id = "move-down">↓</button>
+    <button id = "move-right">→</button>
+  </div>
+
 </div>
+
   </body>
 </html>
